samples/_failures_safe/1761407177_f4982a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49b74730.c: In function ‘print_token’:
./samples/SAFE/__tmp_49b74730.c:172:12: error: missing terminating " character
  172 |     printf("
      |            ^
./samples/SAFE/__tmp_49b74730.c:172:5: error: expected expression at end of input
  172 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_49b74730.c:172:5: error: expected declaration or statement at end of input
